tests/snapshots/simplify_matches__flatten_with_terminal.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/flatten_with_terminal.hvm
---
(Foo) = λ%arg0 switch %arg0 = %arg0 { 0: λ%arg1 match %arg1 = %arg1 { A: match %arg1.b = %arg1.b { B: B } }; _: λ%arg1 * }

(main) = (Foo 2 (A B))

(A) = λb #A_t λA #A_t (A b)

(B) = #B_t λB B
