tests/snapshots/simplify_matches__linearize_match_all.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/linearize_match_all.hvm
---
(A) = λa switch a { 0: λb λc (b c); _ d: λe λf (d e f); }

(B) = λa λb λc (switch c { 0: λd λe (d e); _ f: λg λh (g h f); } a b)

(C) = λa λb λc switch c { 0: (a b); _ d: (a b d); }

(D) = λa switch a { 0: λb λc c; _ d: λe λf (d f); }

(E) = λa match a { Cons b c: λd (match d { Cons e f: λg λh (g h e f); Nil: λi λj (Cons i j Nil); } b c); Nil: λk (Nil k); }

(A2) = λa match a { Cons b c: λd λe (b c d e); Nil: λf λg (f g); }

(B2) = λa λb λc (match c { Cons d e: λf λg (f g d e); Nil: λh λi (h i); } a b)

(C2) = λa λb λc match c { Cons d e: (a b d e); Nil: (a b); }

(D2) = λa match a { Cons b c: λd λe (b c d e); Nil: λf λg (f g); }

(main) = *

(Cons) = λa λb #ConsList λc #ConsList λd #ConsList (c a b)

(Nil) = #ConsList λa #ConsList λb b
