tests/snapshots/simplify_matches__nested.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/nested.bend
---
unchecked Rule: Any
(Rule) = λa match a { Foo/CtrA b c: (match c { Bar/CtrB1 d: λe (e d); Bar/CtrB2 f g: λh (match f { Baz/CtrC: λi λj (i j); } h g); } b); Foo/CtrB k: k; }

Foo/CtrA/tag: _
(Foo/CtrA/tag) = 0

Foo/CtrA: (Any -> Any -> Foo)
(Foo/CtrA) = λa λb λc (c Foo/CtrA/tag a b)

Foo/CtrB/tag: _
(Foo/CtrB/tag) = 1

Foo/CtrB: (Any -> Foo)
(Foo/CtrB) = λa λb (b Foo/CtrB/tag a)

Bar/CtrB1/tag: _
(Bar/CtrB1/tag) = 0

Bar/CtrB1: (Any -> Bar)
(Bar/CtrB1) = λa λb (b Bar/CtrB1/tag a)

Bar/CtrB2/tag: _
(Bar/CtrB2/tag) = 1

Bar/CtrB2: (Any -> Any -> Bar)
(Bar/CtrB2) = λa λb λc (c Bar/CtrB2/tag a b)

Baz/CtrC/tag: _
(Baz/CtrC/tag) = 0

Baz/CtrC: Baz
(Baz/CtrC) = λa (a Baz/CtrC/tag)
[4m[1m[33mWarnings:[0m
[1mIn [4mtests/golden_tests/simplify_matches/nested.bend[0m[1m :[0m
[1mIn definition '[4mRule[0m[1m':[0m
  Unreachable pattern matching rule '(Rule (Foo/CtrA a b))' (rule index 2).
  Unreachable pattern matching rule '(Rule x)' (rule index 4).
