tests/snapshots/simplify_matches__nested2.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/nested2.bend
---
unchecked Foo: Any
(Foo) = λa λb (match b { List/Nil: λc (c List/Nil); List/Cons d e: λf (match e { List/Nil: λg λh (g (List/Cons h List/Nil)); List/Cons i j: λk λl (k l i j); } f d); } a)

List/Nil/tag: _
(List/Nil/tag) = 0

List/Nil: (List T)
(List/Nil) = λa (a List/Nil/tag)

List/Cons/tag: _
(List/Cons/tag) = 1

List/Cons: (T -> (List T) -> (List T))
(List/Cons) = λa λb λc (c List/Cons/tag a b)
