tests/snapshots/simplify_matches__redundant_with_era.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/redundant_with_era.bend
---
(Fn2) = λa switch a { 0: λb let c = b; let (d, e) = c; let (f, g) = e; g; _ h: λi let j = i; let (k, l) = j; let (m, n) = l; n; }

(main) = *
